bMotion CHANGELOG
-----------------

* = changed/fixed
+ = added
- = removed

*  James           fixed spelling error in name of onjoin plugin
*  James           fixed onjoin plugin to use new abstracts system
*  Kevin           moved some question handling into the complex question handler from other places so as not to break "how're you" with generic "how" questions
+  Kevin           added a "how're you?" handler
+  Kevin           added a "do you want/need" handler
*  James           changed CHANGELOG format now that other people are actively coding
*  Shruuf          bMotion now supports !-channels as wells as #-channels
*  James           hugging the bot will make it happier and hornier
*  James           don't repeatedly wave back if repeatedly waved at
*  James           moved newer activate plugin to end of plugins list because it was interrupting the startrek one
*  James           set complex_readings to break out after triggering
*  Greg            added more words to complex_scrap
*  James           some improvements to learning new words
*  James           stop output_pinky from modifying short lines
*  James           fixed a couple of typos in abstracts
+  James           added fact learning!
+  Kevin           added fact-fetching plugin
+  James           added new abstract management system and started changing over to it
+  James           added complex_correct plugin to correct the error "should|must of" to "have"
-  James           removed some of the mood-based random output because it doesn't fit with new code for now


2003/08/03
v0.0.7

* fixed [ 680856 ] irc_nick_away plugin returns wrong values
* fixed [ 729155 ] $nick error
* fixed [ 726241 ] Techsupport does not use elections
* tidied up code in trivia plugin
* moved colen-chars handler to plugin
* added [ 749777 ] specify time for shutting up
* fixed long-standing "Tcl error [bMotion_event_action]: can't read "newnick": no such variable" error after 2am inspriation